// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jenkins bot if job has changes and user has set up their api key and username, include number of changes on the card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "asgard",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Job COMPLETED",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "Status:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "Number of changes:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[18](http://localhost:8080/job/asgard/18/)",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "3",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Open in Jenkins",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/18/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;

exports[`jenkins bot when task is completed, posts a card 1`] = `
Array [
  Array [
    Object {
      "$schema": "http://adaptivecards.io/schemas/adaptive-card.json",
      "body": Array [
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Accent",
                  "text": "asgard",
                  "type": "TextBlock",
                  "weight": "Lighter",
                },
                Object {
                  "color": "Light",
                  "size": "Large",
                  "spacing": "Small",
                  "text": "Job COMPLETED",
                  "type": "TextBlock",
                  "weight": "Bolder",
                  "wrap": true,
                },
              ],
              "type": "Column",
              "width": "stretch",
            },
          ],
          "type": "ColumnSet",
        },
        Object {
          "columns": Array [
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "Build number:",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "Status:",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 35,
            },
            Object {
              "items": Array [
                Object {
                  "color": "Light",
                  "text": "[17](http://localhost:8080/job/asgard/17/)",
                  "type": "TextBlock",
                },
                Object {
                  "color": "Light",
                  "spacing": "Small",
                  "text": "SUCCESS",
                  "type": "TextBlock",
                },
              ],
              "type": "Column",
              "width": 65,
            },
          ],
          "horizontalAlignment": "Center",
          "spacing": "Padding",
          "type": "ColumnSet",
        },
        Object {
          "actions": Array [
            Object {
              "title": "Open in Jenkins",
              "type": "Action.OpenUrl",
              "url": "http://localhost:8080/job/asgard/17/",
            },
          ],
          "type": "ActionSet",
        },
      ],
      "type": "AdaptiveCard",
      "version": "1.2",
    },
  ],
]
`;
